Bug 1076091 - Don't bake in the initial undefined values of global names, r=jandem.